2015-06-19  Mark Wielaard  <mjw@redhat.com>

	* elfutils.spec.in: Update for 0.163.

2015-06-11  Mark Wielaard  <mjw@redhat.com>

	* elfutils.spec.in (devel): Include elfutils/known-dwarf.h and
	elfutils/version.h.

2015-06-10  Mark Wielaard  <mjw@redhat.com>

	* elfutils.spec.in: Update for 0.162.

2015-05-23  Mark Wielaard  <mjw@redhat.com>

	* eu.am (STACK_USAGE_WARNING): New variable set based on
	ADD_STACK_USAGE_WARNING conditional.
	(AM_CFLAGS): Use STACK_USAGE_WARNING variable.

2015-05-23  Mark Wielaard  <mjw@redhat.com>

	* eu.am (AM_CFLAGS): Add -Wstack-usage=262144.

2015-04-23  Max Filippov  <jcmvbkbc@gmail.com>

	* eu.am (DEFS.os): New variable.

2015-03-18  Petr Machata  <pmachata@redhat.com>

	* known-dwarf.awk (comment): Drop all uses of this variable.
	(END): Always emit the non-_DESC variant.  Emit
	DWARF_ALL_KNOWN_DW_ instead of ALL_KNOWN_DW_*, and
	DWARF_ONE_KNOWN_DW_ instead of ONE_KNOWN_DW_*.

2015-02-20  Petr Machata  <pmachata@redhat.com>

	* known-dwarf.awk (END): Drop useless variables lo, hi.  Merge two
	continue-checks in one.

2014-12-18  Mark Wielaard  <mjw@redhat.com>

	* elfutils.spec.in: Update for 0.161.

2014-11-27  Mark Wielaard  <mjw@redhat.com>

	* eu.am: Define textrel_msg, textrel_found and textrel_check based
	on FATAL_TEXTREL.

2014-08-25  Mark Wielaard  <mjw@redhat.com>

	* elfutils.spec.in: Update for 0.160.

2014-05-17  Mark Wielaard  <mjw@redhat.com>

	* elfutils.spec.in: Update for 0.159.
	(%files devel): Add libdwelf.h.

2014-04-13  Mark Wielaard  <mjw@redhat.com>

	* eu.am (AM_CFLAGS): Don't add -fmudflap.
	(COMPILE.os): Don't remove no_mudflap.os.

2014-01-22  Mark Wielaard  <mjw@redhat.com>

	* eu.am (AM_CFLAGS): Unconditionally add -Wformat=2.

2014-01-03  Mark Wielaard  <mjw@redhat.com>

	* elfutils.spec.in: Update for 0.158.

2013-11-01  Michael Forney  <mforney@mforney.org>

	* eu.am: Use READELF.

2013-09-30  Mark Wielaard  <mjw@redhat.com>

	* elfutils.spec.in: Update for readelf NT_SIGINFO and NT_FILE